Update README.md
provided more detail in the README because of the updated UI