@@ -2,50 +2,16 @@
 
 ## Description
 
-A Java-based encrypted file vault application that allows users to securely register, login, and encrypt/decrypt files using password-based AES encryption.
+The Encrypted File Vault is a JavaFX-based desktop application that allows users to **securely encrypt and decrypt files** using a password of their choice. It includes full user authentication and handles encryption/decryption with helpful feedback messages  all wrapped in a clean and simple user interface.
 
 ## Features
 
-- User registration and login with secure password hashing and salting.
-- File encryption and decryption with AES-256-CBC and PBKDF2 key derivation.
-- Command-line interface (CLI) for easy interaction.
-- SQLite database to store user info and vault paths.
-
-## Getting Started
-
-### Prerequisites
-
-- Java 24+
-- SQLite JDBC Driver (sqlite-jdbc-3.49.1.0.jar) included in lib/ folder (same level as src/)
-- Any Java IDE
-
-### Setup
-
-1. Clone this repository:
-
-```
-git clone https://github.com/arjunerasani/EncryptedFileVault.git
-cd EncryptedFileVault
-```
-
-2. Ensure the lib/sqlite-jdbc-3.49.1.0.jar file is present (or if a newer version of the JDBC driver is available, replace the existing driver in the same directory).
-3. Add the SQLite JDBC jar as a library/dependency in your IDE or include it in your classpath.
-
-## Running the Application
-
-Run the main class (e.g., com.vault.app.Main) via your IDE or command line:
-
-```
-java -cp "lib/*:out/production/EncryptedFileVault" com.vault.app.Main
-```
-
-*(Adjust the classpath according to your setup)*
-
-### Usage
-
-- Register a new user with a username and password.
-- Login using registered credentials.
-- Use the vault menu to encrypt or decrypt files by provided file paths and passwords.
+- **User Registration & Login** system with secure password hashing
+- **File Encryption & Decryption** using password-protected AES
+- **JavaFX GUI** with clear instructions and entry fields
+- **Custom file path support** for input and output
+- **Success and error dialogs** for all major operations
+- Built-in SQLite database for user authentication
 
 ## Project Structure
 
@@ -54,15 +20,67 @@ EncryptedFileVault/
 |--- src/              # Source code
 |--- lib/              # External libraries (SQLite JDBC)
 |--- vault/            # Folder for storing the database (create your own or download from the repository)
-|--- README.MD/        # This file
+|--- README.md/        # This file
+|--- LICENSE.md        # MIT license
 ```
 
-## Important Notes
+## Technologies Used
 
-- The vault/folder must exist before running the program otherwise a database error will occur.
-- Passwords are securly hashed and salted; the salt is stored in the database.
-- The program uses AES encryption with a random salt and IV for security.
+- Java 17+
+- JavaFX (for GUI)
+- SQLite (via JDBC)
+- AES Encryption (Java Cryptography Extension)
+- MVC-style architecture
 
-## Contributing
+## Setup Instructions
 
-Feel free to open issues or submit pull requests.
+### Requirements
+
+- Java JDK 17+
+- JavaFX SDK
+- SQLite (JDBC bundled or included)
+- IDE such as IntelliJ IDEA or Eclipse
+
+### Steps to Run
+
+1. **Clone the repository:**
+
+   ```bash
+   git clone https://github.com/YOUR_USERNAME/EncryptedFileVault.git
+   cd EncryptedFileVault
+   ```
+
+2. **Open the project in your IDE** and configure JavaFX:
+
+- Set the --module-path VM option to point to the JavaFX SDK's lib directory.
+- Include --add-modules javafx.controls,javafx.fxml in the VM options.
+
+3. **Run the application**:
+
+- Run the VaultFXApp.java class.
+- The GUI will open with a registration or login screen.
+
+## How It Works
+
+### Authentication
+
+- Passwords are hashed using a secure algorithm before storing them in the SQLite database.
+- Users can register with a unique username and password.
+
+### File Encryption
+
+- Files are encrypted using AES with user-provided password.
+- You specify both the input and output destination via file paths.
+- On successful encryption or decryption, a confirmation is shown.
+
+### Error Handling
+
+- Validates file existence and file paths.
+- Prevents empty fields or invalid inputs.
+- Graceful handling of I/O and cryptography errors.
+
+## Author
+
+Arjun Erasani
+Email: arerasani9@gmail.com
+GitHub: https://github.com/arjunerasani
